methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:7: error: ':' expected but ')' found.
def isFacingTrial(c): Boolean={
                   ^SlugSnail:23: error: identifier expected but '}' found.
}
^